--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -1,123 +1,202 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="Process_EmpresaSoap" />
-                <binding name="Process_CuentaSoap" />
-                <binding name="Process_UsuarioSoap" />
-                <binding name="Process_RolSoap" />
-                <binding name="Process_RegionSoap" />
-                <binding name="Process_ProvinciaSoap" />
-                <binding name="Process_ComunaSoap" />
-                <binding name="Process_ValidadoresSoap" />
-                <binding name="Process_UnidadSoap" />
-                <binding name="Process_CargoSoap" />
-                <binding name="Process_CargosUsuariosSoap" />
-                <binding name="Process_PermisosSoap" />
-                <binding name="Process_AccesoSoap" />
-            </basicHttpBinding>
-            <customBinding>
-                <binding name="Process_EmpresaSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_CuentaSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_UsuarioSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_RolSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_RegionSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_ProvinciaSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_ComunaSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_ValidadoresSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_UnidadSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_CargoSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_CargosUsuariosSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_PermisosSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-                <binding name="Process_AccesoSoap12">
-                    <textMessageEncoding messageVersion="Soap12" />
-                    <httpTransport />
-                </binding>
-            </customBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:52755/Process_Empresa.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
-                contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
-            <endpoint address="http://localhost:52755/Process_Region.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_RegionSoap"
-                contract="ServiceProcess_Region.Process_RegionSoap" name="Process_RegionSoap" />
-            <endpoint address="http://localhost:52755/Process_Provincia.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_ProvinciaSoap"
-                contract="ServiceProcess_Provincia.Process_ProvinciaSoap"
-                name="Process_ProvinciaSoap" />
-            <endpoint address="http://localhost:52755/Process_Comuna.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_ComunaSoap"
-                contract="ServiceProcess_Comuna.Process_ComunaSoap" name="Process_ComunaSoap" />
-            <endpoint address="http://localhost:52755/Process_Unidad.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
-                contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
-            <endpoint address="http://localhost:52755/Process_Cargo.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
-                contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
-            <endpoint address="http://localhost:52755/Process_Validadores.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
-                contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
-                name="Process_ValidadoresSoap" />
-            <endpoint address="http://localhost:52755/Process_Usuario.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
-                contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
-            <endpoint address="http://localhost:52755/Process_CargosUsuarios.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
-                contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
-                name="Process_CargosUsuariosSoap" />
-            <endpoint address="http://localhost:52755/Process_Acceso.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_AccesoSoap"
-                contract="ServiceProcess_Acceso.Process_AccesoSoap" name="Process_AccesoSoap" />
-            <endpoint address="http://localhost:52755/Process_Permisos.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
-                contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
-            <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
-                bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
-                name="Process_RolSoap" />
-            <endpoint address="http://localhost:52755/Process_Cuenta.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
-                contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />            
-        </client>
-    </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Process_EmpresaSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_CuentaSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_UsuarioSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_RolSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_RegionSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_ProvinciaSoap" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_ComunaSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_ValidadoresSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+         receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+         bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+         maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+         useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
+        <binding name="Process_UnidadSoap" />
+        <binding name="Process_CargoSoap" />
+        <binding name="Process_CargosUsuariosSoap" />
+        <binding name="Process_PermisosSoap" />
+        <binding name="Process_AccesoSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="Process_EmpresaSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_CuentaSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_UsuarioSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_RolSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_RegionSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_ProvinciaSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_ComunaSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_ValidadoresSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_UnidadSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_CargoSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_CargosUsuariosSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_PermisosSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_AccesoSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:52755/Process_Unidad.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
+        contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
+      <endpoint address="http://localhost:52755/Process_Cargo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
+        contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
+      <endpoint address="http://localhost:52755/Process_CargosUsuarios.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
+        contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
+        name="Process_CargosUsuariosSoap" />
+      <endpoint address="http://localhost:52755/Process_Acceso.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_AccesoSoap"
+        contract="ServiceProcess_Acceso.Process_AccesoSoap" name="Process_AccesoSoap" />
+      <endpoint address="http://localhost:52755/Process_Permisos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
+        contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
+        contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Usuario.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
+        contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Rol.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_RolSoap"
+        contract="ServiceProcess_Rol.Process_RolSoap" name="Process_RolSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Comuna.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_ComunaSoap"
+        contract="ServiceProcess_Comuna.Process_ComunaSoap" name="Process_ComunaSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Provincia.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_ProvinciaSoap"
+        contract="ServiceProcess_Provincia.Process_ProvinciaSoap" name="Process_ProvinciaSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Region.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_RegionSoap"
+        contract="ServiceProcess_Region.Process_RegionSoap" name="Process_RegionSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Empresa.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
+        contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Validadores.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
+        contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
+        name="Process_ValidadoresSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
