--- a/Process_APP_Desk/Process_APP_Desk.csproj
+++ b/Process_APP_Desk/Process_APP_Desk.csproj
@@ -174,6 +174,18 @@
     <Compile Include="FormUnidad.Designer.cs">
       <DependentUpon>FormUnidad.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormUnidadModal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUnidadModal.Designer.cs">
+      <DependentUpon>FormUnidadModal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUnidadModalNuevo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUnidadModalNuevo.Designer.cs">
+      <DependentUpon>FormUnidadModalNuevo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -223,6 +235,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormUnidad.resx">
       <DependentUpon>FormUnidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUnidadModal.resx">
+      <DependentUpon>FormUnidadModal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUnidadModalNuevo.resx">
+      <DependentUpon>FormUnidadModalNuevo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUsuario.resx">
       <DependentUpon>FormUsuario.cs</DependentUpon>
@@ -289,7 +307,7 @@
     <None Include="Connected Services\ServiceProcess_Unidad\Process_APP_Desk.ServiceProcess_Unidad.Unidad.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServiceProcess_Unidad\Process_Unidad.wsdl" />
+    <None Include="Connected Services\ServiceProcess_Unidad\Process_Unidad1.wsdl" />
     <None Include="Connected Services\ServiceProcess_Usuario\Process_APP_Desk.ServiceProcess_Usuario.Usuario.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -495,9 +513,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ServiceProcess_Unidad\Process_Unidad.disco" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Connected Services\ServiceProcess_Unidad\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
@@ -625,6 +640,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\135-search-white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceProcess_Unidad\Process_Unidad1.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\189-tree.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\273-checkmark-black.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
