Desarrollo de mejoras Mantenedor Cargo

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -95,17 +95,27 @@
           </security>
         </binding>
         <binding name="Process_UnidadSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
-         receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-         bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-         maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
-         useDefaultWebProxy="true" messageEncoding="Text">
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>        
+        <binding name="Process_CargoSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <security mode="TransportCredentialOnly">
             <transport clientCredentialType="Basic" />
           </security>
         </binding>
-        <binding name="Process_CargoSoap" />
         <binding name="Process_CargosUsuariosSoap" />
         <binding name="Process_PermisosSoap" />
         <binding name="Process_AccesoSoap" />
@@ -166,9 +176,6 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:52755/Process_Cargo.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
-        contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
       <endpoint address="http://localhost:52755/Process_CargosUsuarios.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
         contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
@@ -207,6 +214,9 @@
       <endpoint address="http://52.67.249.164:8071/Process_Unidad.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
         contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Cargo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
+        contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
     </client>
   </system.serviceModel>
 </configuration>
