Desarrollo Mantenedor Rol

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -104,7 +104,7 @@
           <security mode="TransportCredentialOnly">
             <transport clientCredentialType="Basic" />
           </security>
-        </binding>        
+        </binding>
         <binding name="Process_CargoSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
           bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
@@ -117,8 +117,21 @@
           </security>
         </binding>
         <binding name="Process_CargosUsuariosSoap" />
-        <binding name="Process_PermisosSoap" />
-        <binding name="Process_AccesoSoap" />
+        <binding name="Process_PermisosSoap" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
+          maxReceivedMessageSize="65536" useDefaultWebProxy="true" />
+        <binding name="Process_AccesoSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
+          useDefaultWebProxy="true" messageEncoding="Text">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Basic" />
+          </security>
+        </binding>
       </basicHttpBinding>
       <customBinding>
         <binding name="Process_EmpresaSoap12">
@@ -180,12 +193,6 @@
         binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
         contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
         name="Process_CargosUsuariosSoap" />
-      <endpoint address="http://localhost:52755/Process_Acceso.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_AccesoSoap"
-        contract="ServiceProcess_Acceso.Process_AccesoSoap" name="Process_AccesoSoap" />
-      <endpoint address="http://localhost:52755/Process_Permisos.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
-        contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
       <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
         contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
@@ -217,6 +224,12 @@
       <endpoint address="http://52.67.249.164:8071/Process_Cargo.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
         contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Acceso.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_AccesoSoap"
+        contract="ServiceProcess_Acceso.Process_AccesoSoap" name="Process_AccesoSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Permisos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
+        contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
     </client>
   </system.serviceModel>
 </configuration>
