--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -30,15 +30,8 @@
         </binding>
         <binding name="Process_UsuarioSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
-          useDefaultWebProxy="true" messageEncoding="Text">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="TransportCredentialOnly">
-            <transport clientCredentialType="Basic" />
-          </security>
-        </binding>
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" />
         <binding name="Process_RolSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
           bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
@@ -116,7 +109,10 @@
             <transport clientCredentialType="Basic" />
           </security>
         </binding>
-        <binding name="Process_CargosUsuariosSoap" />
+        <binding name="Process_CargosUsuariosSoap" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
+          maxReceivedMessageSize="65536" useDefaultWebProxy="true" />
         <binding name="Process_PermisosSoap" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="524288"
@@ -189,16 +185,9 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:52755/Process_CargosUsuarios.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
-        contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
-        name="Process_CargosUsuariosSoap" />
       <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
         contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
-      <endpoint address="http://52.67.249.164:8071/Process_Usuario.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
-        contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
       <endpoint address="http://52.67.249.164:8071/Process_Rol.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_RolSoap"
         contract="ServiceProcess_Rol.Process_RolSoap" name="Process_RolSoap" />
@@ -230,6 +219,13 @@
       <endpoint address="http://52.67.249.164:8071/Process_Permisos.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
         contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_CargosUsuarios.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
+        contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
+        name="Process_CargosUsuariosSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Usuario.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
+        contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
     </client>
   </system.serviceModel>
 </configuration>
