Desarrollo Mantenedor Cuenta V2

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -19,15 +19,8 @@
         </binding>
         <binding name="Process_CuentaSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
-          useDefaultWebProxy="true" messageEncoding="Text">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="TransportCredentialOnly">
-            <transport clientCredentialType="Basic" />
-          </security>
-        </binding>
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" />
         <binding name="Process_UsuarioSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
           bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -185,9 +178,6 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
-        contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
       <endpoint address="http://52.67.249.164:8071/Process_Rol.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_RolSoap"
         contract="ServiceProcess_Rol.Process_RolSoap" name="Process_RolSoap" />
@@ -226,6 +216,9 @@
       <endpoint address="http://52.67.249.164:8071/Process_Usuario.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
         contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
+        contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
     </client>
   </system.serviceModel>
 </configuration>
