--- a/Process_APP_Desk/Process_APP_Desk.csproj
+++ b/Process_APP_Desk/Process_APP_Desk.csproj
@@ -162,6 +162,18 @@
     <Compile Include="FormCuenta.Designer.cs">
       <DependentUpon>FormCuenta.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCuentaModal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCuentaModal.Designer.cs">
+      <DependentUpon>FormCuentaModal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCuentaModalNuevo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCuentaModalNuevo.Designer.cs">
+      <DependentUpon>FormCuentaModalNuevo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormEmpresa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -265,6 +277,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCuenta.resx">
       <DependentUpon>FormCuenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCuentaModal.resx">
+      <DependentUpon>FormCuentaModal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCuentaModalNuevo.resx">
+      <DependentUpon>FormCuentaModalNuevo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormEmpresa.resx">
       <DependentUpon>FormEmpresa.cs</DependentUpon>
