Se completa Mantenedor de Equipo

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -82,15 +82,8 @@
         </binding>
         <binding name="Process_UnidadSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" textEncoding="utf-8"
-          useDefaultWebProxy="true" messageEncoding="Text">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="TransportCredentialOnly">
-            <transport clientCredentialType="Basic" />
-          </security>
-        </binding>
+          bypassProxyOnLocal="false" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          useDefaultWebProxy="true" />
         <binding name="Process_CargoSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
           bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
@@ -121,6 +114,8 @@
             <transport clientCredentialType="Basic" />
           </security>
         </binding>
+        <binding name="Process_EquipoSoap" />
+        <binding name="Process_UsuarioEquipoSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="Process_EmpresaSoap12">
@@ -175,6 +170,14 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
+        <binding name="Process_EquipoSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="Process_UsuarioEquipoSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
       </customBinding>
     </bindings>
     <client>
@@ -197,9 +200,6 @@
         binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
         contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
         name="Process_ValidadoresSoap" />
-      <endpoint address="http://52.67.249.164:8071/Process_Unidad.asmx"
-        binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
-        contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
       <endpoint address="http://52.67.249.164:8071/Process_Cargo.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
         contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
@@ -219,6 +219,16 @@
       <endpoint address="http://52.67.249.164:8071/Process_Cuenta.asmx"
         binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
         contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Unidad.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
+        contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_Equipo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_EquipoSoap"
+        contract="ServiceProcess_Equipo.Process_EquipoSoap" name="Process_EquipoSoap" />
+      <endpoint address="http://52.67.249.164:8071/Process_UsuarioEquipo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Process_UsuarioEquipoSoap"
+        contract="ServiceProcess_UsuarioEquipo.Process_UsuarioEquipoSoap"
+        name="Process_UsuarioEquipoSoap" />
     </client>
   </system.serviceModel>
 </configuration>
